# feeder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
contracts/: Cargo.toml
contracts/proto/: records.proto  sources.proto  users.proto
contracts/src/: main.rs
docker/: cache-deps.dockerfile  common.dockerfile  tdlib.dockerfile
envoy/: Dockerfile  envoy.yaml
feeder/: Cargo.toml
feeder/migrations/: 20210706154609_init.sql  20210706154633_images.sql  20210706154641_last_scrape_time.sql  20210706154654_record_link.sql  20210706154704_files.sql
feeder/migrations/2020-11-04-183654_init/: down.sql  up.sql
feeder/migrations/2020-11-07-104502_uniq_source/: down.sql  up.sql
feeder/migrations/2020-11-09-150331_images/: down.sql
feeder/migrations/2020-11-15-111338_last_scrape_time/: down.sql
feeder/migrations/2020-11-29-160940_record_link/: down.sql  up.sql
feeder/migrations/2020-12-04-174530_files/: up.sql
feeder/src/: aggregator.rs  config.rs  lib.rs  result.rs
feeder/src/models/: file.rs  mod.rs  record.rs  source.rs
feeder/src/storage/: mod.rs  pg.rs  schema.rs
feeder/src/updates/: http.rs  mod.rs  vk.rs
feeder/src/updates/tg/: handler.rs  mod.rs  source.rs  source_provider.rs  updates_handler.rs
http-collector/: Cargo.toml  README.md
http-collector/examples/: main.rs
http-collector/src/: collector.rs  lib.rs  models.rs  result.rs
interface/: Cargo.toml  build.rs
interface/config/: default.yaml
interface/migrations/: 20210706154805_init.sql  20210706154826_sources_settings.sql  20210706154829_users_login.sql  20210706154831_tags.sql  20210706154834_folders.sql  20210708195249_alter_folders.sql  20210713143943_uniq_source_source_folder.sql  20210713214524_source_tags.sql
interface/migrations/2020-11-10-204313_init/: up.sql
interface/migrations/2020-11-17-222143_user_token/: down.sql
interface/migrations/2020-11-20-153404_sources_settings/: down.sql
interface/migrations/2021-02-28-104931_tags/: down.sql  up.sql
interface/migrations/2021-03-06-203534_folders/: down.sql  up.sql
interface/proto/: records.proto  sources.proto  users.proto
interface/src/: auth.rs  cli.rs  init.rs  main.rs  result.rs  schema.rs  settings.rs
interface/src/db/: mod.rs  models.rs
interface/src/db/queries/: folders.rs  mod.rs  records.rs  sources.rs  users.rs
interface/src/grpc/: mod.rs  proto.rs  records.rs  server.rs  sources.rs  users.rs
interface/src/grpc/pb/: mod.rs  records.rs  sources.rs  users.rs
interface/src/rest/: auth.rs  filters.rs  mod.rs  result.rs  server.rs
interface/src/rest/handlers/: mod.rs  records.rs  sources.rs  users.rs
interface/src/server/: auth.rs  mod.rs  result.rs
interface/src/server/handlers/: mod.rs  records.rs  sources.rs  users.rs
standalone-server/: Cargo.toml
standalone-server/migrations/2020-11-10-204313_init/: down.sql
standalone-server/migrations/2020-11-17-222143_user_token/: up.sql
standalone-server/migrations/2020-11-20-153404_sources_settings/: up.sql
standalone-server/migrations/2020-11-20-205529_users_login/: down.sql
standalone-server/src/: cli.rs  main.rs  result.rs  settings.rs
standalone-server/src/db/queries/: records.rs  sources.rs  users.rs
standalone-server/src/server/: auth.rs  mod.rs  server.rs
standalone-server/src/server/handlers/: records.rs  routes.rs  sources.rs  users.rs
tg-collector/: Cargo.toml
tg-collector/examples/: main.rs
tg-collector/src/: config.rs  lib.rs  result.rs  tg_client.rs  traits.rs  types.rs
tg-collector/src/parsers/: default.rs  mod.rs
vk-collector/: Cargo.toml
vk-collector/examples/: main.rs
vk-collector/src/: client.rs  collector.rs  lib.rs  result.rs  throttler.rs  types.rs
