[package]
name = "feeder"
version = "0.1.0"
authors = []
edition = "2018"

[features]
default = []

pg-storage = ["diesel", "diesel_migrations", "tokio-diesel"]

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.3"
async-trait = "0.1.41"
futures = "0.3.0"

log = "0.4.8"
env_logger = "0.7.1"

diesel = { version = "1.4.4", default-features = false, features = [ "postgres", "chrono" ], optional = true }
diesel_migrations = { version = "1.4.0", optional = true }
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel.git", rev = "f4af425", optional = true }

http-collector = {path = "../http-collector"}
tg-collector = {path = "../tg-collector"}
vk-collector = {path = "../vk-collector"}
reqwest = "0.11.0"

lazy_static = "1.4"
chrono = {version ="0.4.13", features = ["serde"]}

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

derive_builder = "0.9.0"