[package]
name = "interface"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rest = ["actix-web-httpauth", "actix-service", "actix", "actix-cors", "actix-rt", "actix-web", "pbkdf2"]
default = []

[dependencies]
lazy_static = "1.4"
diesel = {version ="*", features = ["chrono", "postgres" ]}
tokio = {version = "0.2", features = ["full"] }
chrono = {version ="*", features = ["serde"]}
tokio-diesel = "*"
env_logger = "*"
async-trait = "*"
log = "*"
futures = "*"
tg-collector = {path = "../tg-collector"}
clap = "2.3.33"


actix-web-httpauth = {version = "0.5.0", optional = true}
actix-service = {version = "1.0.6", optional = true}

pbkdf2 = { version = "0.2", optional = true}

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.actix]
version = "0.10.0"
optional = true

[dependencies.feeder]
path = "../feeder"
features = ["pg-storage"]

[dependencies.actix-cors]
version = "0.5.1"
optional = true

[dependencies.actix-rt]
version = "1.1.1"
optional = true

[dependencies.derive_more]
version = "0.99.11"

[dependencies.actix-web]
version = "3.2.0"
optional = true

[dependencies.config]
version = "0.9"
features = ["yaml"]