[package]
name = "interface"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
diesel = { version = "*", features = ["chrono", "postgres"] }
tokio = { version = "1", features = ["full"] }
prost = "*"
prost-types = "*" # Contains definitions of Protocol Buffers well-known types
tonic = {version = "*"}
rand = "*"
chrono = { version = "*", features = ["serde"] }
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel.git", rev = "f4af425" }
env_logger = "*"
async-trait = "*"
log = "*"
futures = "*"
tg-collector = { path = "../tg-collector" }
clap = "2.3.33"

diesel_migrations = "1.4.0"
pbkdf2 = "*"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.feeder]
path = "../feeder"
features = ["pg-storage"]

[dependencies.derive_more]
version = "0.99.11"

[dependencies.config]
version = "0.9"
features = ["yaml"]


[build-dependencies]
tonic-build = "0.4"