[package]
name = "interface"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
tokio = { version = "1", features = ["full"] }
prost = "*"
prost-types = "*" # Contains definitions of Protocol Buffers well-known types
tonic = {version = "*"}
rand = "*"
chrono = { version = "*", features = ["serde"] }
env_logger = "*"
async-trait = "*"
log = "*"
futures = "*"
tg-collector = { path = "../tg-collector" }
clap = "2.3.33"
jsonwebtoken = "7"

sql-builder = "3.1.1"
pbkdf2 = "0.6.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.feeder]
path = "../feeder"

[dependencies.derive_more]
version = "0.99.11"

[dependencies.config]
version = "0.9"
features = ["yaml"]


[build-dependencies]
tonic-build = "0.4"

[dependencies.sqlx]
version = "0.5.5"
features = ["postgres", "runtime-tokio-rustls", "macros", "chrono", "migrate"]
