[package]
name = "tg-collector"
version = "0.1.0"
authors = ["Anton Spitsyn <a.ch.clr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.24", features = ["full"]}

#rust-tdlib = { version = "0.1.2" }
rust-tdlib = { git = "https://github.com/aCLr/rust-tdlib.git", revision = "738fbae"}
futures = "0.3.7"
futures-util = "0.3.7"

log = "0.4"

async-trait = "0.1.42"
dyn-clone = "1.0.3"

serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
simple_logger = "1.3"
chrono = "0.4.19"
tokio = {version = "0.2.24", features = ["full"]}